Fix translation and stats bugs
The translation feature is still only translating the homepage, and the stats at the bottom of the page are not auto-updating.

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -50,6 +50,10 @@
     "loading": "Loading your chats...",
     "searchPlaceholder": "Search your active chats...",
     "startNew": "Start New Language Chat",
+    "emptyTitle": "No active chats",
+    "emptyDesc": "Start your first language recording session to see it here.",
+    "startRecordingBtn": "Start Recording",
+    "progressSummary": "{{completed}} of {{total}} tasks completed",
     "errors": {
       "loadTitle": "Error loading chats"
     }
